<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movies">Movies</string>
    <string name="tvshows">TV Shows</string>
    <string name="bookmark">Bookmark</string>
    <string name="title_activity_bookmark">Bookmarks</string>
    <string name="main_title">Bookmarks</string>


</resources>